# codepod

./: .gitignore  .prettierignore  CLAUDE.md  CODEBUDDY.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.husky/: commit-msg  pre-commit
scripts/: proxy-server.js
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  pty.rs
src-tauri/src/commands/: claude.rs  config.rs  fs.rs  git.rs  mod.rs
src/components/: MainView.vue
src/components/chat/: ChatInput.vue  ChatView.vue  CodeBlock.vue  DiffBlock.vue  ExportDialog.vue  MessageItem.vue  MessageList.vue  SearchBar.vue  index.ts  (+1 more)
src/composables/: index.ts  useClaude.ts  useDiff.ts  useHighlighter.ts  useKeyboard.ts  useProject.ts  useSearch.ts  useSessionSearch.ts
src/services/: claudeHttp.ts  index.ts
src/stores/: app.ts  chat.ts  config.ts  index.ts  session.ts  tabs.ts  usage.ts
src/types/: claude.ts  config.ts  explorer.ts  index.ts  session.ts
src/utils/: tauri.ts  terminalThemes.ts
tests/: setup.ts
tests/components/: ChatInput.test.ts  MessageItem.test.ts
tests/composables/: useClaude.test.ts  useKeyboard.test.ts  useSearch.test.ts
tests/e2e/: app.spec.ts
tests/integration/: file-explorer.test.ts  git-status.test.ts  sidebar.test.ts
tests/stores/: app.test.ts  chat.test.ts  session.test.ts
(+34 files in other folders)
