[package]
name = "codepod"
version = "0.1.0"
description = "Claude Code Desktop App"
authors = ["CodePod Contributors"]
license = "MIT"
repository = "https://github.com/chicogong/codepod"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
dirs = "6"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
lazy_static = "1.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
